add large file for s3 test